Lots of stuff and things

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,25 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /* width */
 ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #c1da9e; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+  width: 5px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
   
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c1da9e; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+.md-editor {
+  height: 100% !important;
+}
+
+.md-editor-preview-wrapper {
+  padding: 5px !important;
+}
